# SmartTuitionManager

./: .gitignore  .replit  README.md  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Create-a-complete-Student-Management-System-for-a-private-tuition-class-named-Smart-Tuition-Manager-1762404582105_1762404582108.txt  Pasted-System-Requirements-1-The-system-should-have-3-main-roles-Owner-Admin-Teacher--1762408290196_1762408290200.txt
backend/: manage.py  requirements.txt
backend/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/attendance/: models.py  serializers.py  urls.py  views.py
backend/attendance/migrations/: 0001_initial.py
backend/classes/: models.py  serializers.py  urls.py  views.py
backend/classes/migrations/: 0001_initial.py
backend/payments/: models.py  serializers.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/students/: models.py  serializers.py  views.py
backend/students/migrations/: 0001_initial.py  0002_remove_student_user_alter_student_assigned_class.py
backend/tuition_manager/: asgi.py  settings.py  urls.py  wsgi.py
backend/utils/: sms.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Button.jsx  DataTable.jsx  Modal.jsx  Sidebar.jsx  StudentDetailsModal.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Classes.jsx  Login.jsx  OwnerDashboard.jsx  Payments.jsx  QRScanner.jsx  Reports.jsx  (+4 more)
(+2 files in other folders)
