[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.7",
    "django-cors-headers==4.3.0",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.3.0",
    "pillow==10.1.0",
    "qrcode==7.4.2",
    "twilio==8.10.0",
]
